--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ prometheus-client
 voluptuous>=0.10.2
 apscheduler>=3.0
 tzlocal<3.0  # https://github.com/agronholm/apscheduler/discussions/570
-PrettyTable>=0.6,<0.8
+PrettyTable
 babel>=1.0
 netaddr
 # Pinned due to increase in unit test timeouts related to connection issues
@@ -22,7 +22,7 @@ kazoo==2.9.0
 sqlalchemy>=2.0.0
 alembic
 cryptography>=39.0.0
-cachecontrol<0.12.7
+cachecontrol
 cachetools
 pyjwt>=2.5.0
 iso8601
