--- a/requirements.txt
+++ b/requirements.txt
@@ -43,3 +43,16 @@ opentelemetry-exporter-otlp-proto-http
 confluent-kafka
 boto3
 google-cloud-pubsub
+# For openstack driver
+openstacksdk>=0.103.0,!=2.0.0
+rackspaceauth
+# For openshift driver
+openshift
+# For AWS driver
+boto3>=1.20.0
+# For gcloud driver
+google-api-python-client
+# For ibmvpc driver
+ibm-vpc
+ibm-platform-services
+ibm-cos-sdk>=2.11.0
