--- a/web/package.json
+++ b/web/package.json
@@ -23,8 +23,8 @@
     "oidc-react": "^1.5.1",
     "patternfly-react": "^2.39.16",
     "prop-types": "^15.6.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-height": "^3.0.0",
     "react-json-view": "^1.21.1",
     "react-redux": "<7.1.1",
@@ -32,7 +32,7 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
     "react-select": "3.1.0",
-    "react-test-renderer": "16.13.1",
+    "react-test-renderer": "^16.14.0",
     "redux": "^4.0.5",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-thunk": "^2.3.0",
