Set opentelementry minimum versions
Pip has started to have trouble coming up with a dependency resolution
and is performing excessive backtracking on the opentelementry modules.

To alleviate this, set the minimum versions to the current versions.

See also: https://pip.pypa.io/en/stable/topics/dependency-resolution/#possible-ways-to-reduce-backtracking

Change-Id: I73b98c85a6c2be1801c16f5f976823751d38ee35

--- a/requirements.txt
+++ b/requirements.txt
@@ -37,9 +37,9 @@ cheroot!=8.1.*,!=8.2.*,!=8.3.0 # https://github.com/cherrypy/cheroot/issues/263
 elasticsearch<8.0.0
 PyMySQL
 psycopg2-binary
-opentelemetry-sdk
-opentelemetry-exporter-otlp-proto-grpc
-opentelemetry-exporter-otlp-proto-http
+opentelemetry-sdk>=1.25.0
+opentelemetry-exporter-otlp-proto-grpc>=1.25.0
+opentelemetry-exporter-otlp-proto-http>=1.25.0
 confluent-kafka
 boto3
 google-cloud-pubsub
