Add section config object
This is part of the nodepool-in-zuul work.

This object will behave a little differently; we won't parse most
of it until we actually create a provider out of it.  Thus most
of the options and validation will happen in subsequent changes.

Change-Id: I0510c54bdcae20b31ee348e0e2290824fad1be19

--- a/tests/fixtures/layouts/nodepool.yaml
+++ b/tests/fixtures/layouts/nodepool.yaml
@@ -95,3 +95,15 @@
     name: debian-normal
     image: debian
     flavor: normal
+
+- section:
+    name: aws-base
+    abstract: true
+    connection: aws
+    boot-timeout: 120
+    launch-timeout: 600
+
+- section:
+    name: aws-us-east-1
+    parent: aws-base
+    region: us-east-1
