--- a/tests/fixtures/config/global-repo-state/main.yaml
+++ b/tests/fixtures/config/global-repo-state/main.yaml
@@ -17,3 +17,4 @@
           - org/requiringproject-github
         untrusted-projects:
           - org/requiredproject-github
+          - org/project-branches
