Don't pre fail jobs if they will retry
Prior to this update it was possible for a job to fail in pre-run which
would result in a retry to then also fail in post-run (possibly because
pre-run failed or due to run not running). In that situation the
post-run Ansible execution would notice early failure which would be
treated by the scheduler as a proper job failure leading to gate resets
and the like. Problem is that once the job finishes and reports it would
then be treated as a retry case leading to inconsistencies in behavior
with queue state and odd reporting to users.

In this situation we don't want to treat a post-run failure as inducing
early failure status. Instead we check the will_retry flag when
processing post-run failures and only report early failure if we won't
retry.

A test is added to cover this which is basically a copy of the existing
pre run failure case but we add in post-run failures.

Side note Joseph Kostreva wrote a similar change to fix the same issue
in change Iccc70c59831c27fb8ee512d49e3899ee705b35d1. I wasn't aware of
this change when I debugged and wrote a patch for the problem today. The
approaches are slightly different, but the end result should be the
same.

Change-Id: If78e9b8b55362f5c09d989f6c91a8d773c99fe80

--- a/tests/fixtures/config/early-failure/git/common-config/zuul.yaml
+++ b/tests/fixtures/config/early-failure/git/common-config/zuul.yaml
@@ -62,6 +62,12 @@
       - playbooks/wait.yaml
 
 - job:
+    name: pre-post-failure
+    parent: pre-failure
+    post-run:
+      - playbooks/post-failure.yaml
+
+- job:
     name: output-failure
     files:
       - output-failure.txt
@@ -132,3 +138,13 @@
       fail-fast: true
       jobs:
         - wait
+
+- project:
+    name: org/project5
+    queue: shared
+    check:
+      jobs:
+        - pre-post-failure
+    gate:
+      jobs:
+        - pre-post-failure
