--- a/playbooks/tutorial/run-tutorial.yaml
+++ b/playbooks/tutorial/run-tutorial.yaml
@@ -1,6 +1,21 @@
 - block:
     - name: Install git-review
-      command: python3 -m pip install git-review podman-compose
+      package:
+        name:
+          - git-review
+          - catatonit
+        state: present
+      become: true
+    - name: Start buildx builder
+      # https://github.com/docker/buildx/issues/344
+      # https://bugs.launchpad.net/ubuntu/+source/libpod/+bug/2040483
+      shell: |
+        systemctl stop apparmor.service || true
+        systemctl disable apparmor.service || true
+        aa-teardown || true
+        echo "FROM scratch" | docker buildx build - || true
+      environment:
+        DOCKER_HOST: unix:///run/podman/podman.sock
       become: true
   when: not local
 
