--- a/playbooks/tutorial/run-tutorial.yaml
+++ b/playbooks/tutorial/run-tutorial.yaml
@@ -1,6 +1,10 @@
 - block:
     - name: Install git-review
-      command: python3 -m pip install git-review podman-compose
+      package:
+        name:
+          - git-review
+          - catatonit
+        state: present
       become: true
   when: not local
 
