wip: Implement nodeset request handling
This change unifies the handling of node (nodepool) and nodeset
requests and implements the necessary logic for the scheduler and
executor.

Change-Id: I410e1b4a8658a5bbf4bd466c900942c1c33bd263

--- a/tests/fixtures/layouts/nodepool.yaml
+++ b/tests/fixtures/layouts/nodepool.yaml
@@ -54,7 +54,7 @@
     run: playbooks/base.yaml
     nodeset:
       nodes:
-        - label: ubuntu-xenial
+        - label: debian-normal
           name: controller
 
 - job:
