wip: Fix getting project during re-enqueue
It seems that due to a bug in the "foreign" project handling during
re-enqueue (after a reconfiguration) that the project of a  change for a
change can be wrongly modified leading to the exception below.

Given the following:
- tenant A:
    - Github project1
    - Gerrit project1
- tenant B:
    - Gerrit project2

From tenant A's perspective Gerrit project2 is a foreign project, but it
is part of tenant B. The issue is now when there is a PR from Github
project1 to a change in Gerrit project2. During re-enqueue Zuul will
create a GITHUB project for GERRIT repo project2 on-the-fly and modify
the project2 change to use the made-up project. It seems like this is
finally responsible for the below fallout in that the wrong connection
is used for updating the Gerrit change in project2.

ERROR zuul.Scheduler: Exception processing pipeline check in tenant TENANT
Traceback (most recent call last):
  File "/opt/zuul/lib/python3.11/site-packages/zuul/scheduler.py", line 2296, in process_pipelines
    refreshed = self._process_pipeline(
                ^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/zuul/lib/python3.11/site-packages/zuul/scheduler.py", line 2386, in _process_pipeline
    self.process_pipeline_trigger_queue(tenant, tenant_lock, pipeline)
  File "/opt/zuul/lib/python3.11/site-packages/zuul/scheduler.py", line 2630, in process_pipeline_trigger_queue
    self._process_trigger_event(tenant, pipeline, event)
  File "/opt/zuul/lib/python3.11/site-packages/zuul/scheduler.py", line 2663, in _process_trigger_event
    pipeline.manager.addChange(change, event)
  File "/opt/zuul/lib/python3.11/site-packages/zuul/manager/__init__.py", line 667, in addChange
    self.getDependencyGraph(change, dependency_graph, event,
  File "/opt/zuul/lib/python3.11/site-packages/zuul/manager/__init__.py", line 891, in getDependencyGraph
    self.getDependencyGraph(needed_change,
  File "/opt/zuul/lib/python3.11/site-packages/zuul/manager/__init__.py", line 

--- a/tests/fixtures/config/cross-source/main.yaml
+++ b/tests/fixtures/config/cross-source/main.yaml
@@ -9,3 +9,13 @@
       github:
         untrusted-projects:
           - github/project2
+
+- tenant:
+    name: tenant-two
+    source:
+      gerrit:
+        config-projects:
+          - common-config:
+              exclude: project
+        untrusted-projects:
+          - gerrit/project2
