--- a/tox.ini
+++ b/tox.ini
@@ -103,3 +103,9 @@ passenv =
   ZUUL_ZK_KEY
 commands =
   stestr run --test-path ./tests/remote {posargs}
+
+[testenv:bandit]
+basepython = python3
+description = Bandit code scan, for all python files
+deps = -r{toxinidir}/test-requirements.txt
+commands = bandir -r {toxinidir}/
