Add Bandit scan test
Change-Id: I44c5f1aa6bab34d3de62efb0993726aec61a2583

--- a/tox.ini
+++ b/tox.ini
@@ -103,3 +103,8 @@ passenv =
   ZUUL_ZK_KEY
 commands =
   stestr run --test-path ./tests/remote {posargs}
+
+[testenv:bandit]
+description = Bandit code scan, for all python files
+deps = -r{toxinidir}/test-requirements.txt
+commands = bandit -r {toxinidir}/
