Collect jaeger container logs in quickstart job
With the release of Jaeger 1.59.0 we started getting errors in the
quickstart job due to a lack of tracing data in Jaeger. Without logs for
the jaeger service it is hard to say why this is happening. Collect
those logs so that we can debug further.

Change-Id: Ifedf063612622bbe3bd0faee79042617e2498a14

--- a/playbooks/tutorial/post.yaml
+++ b/playbooks/tutorial/post.yaml
@@ -18,6 +18,7 @@
         podman logs zuul-tutorial_node_1 > {{ ansible_user_dir }}/logs/node.log 2>&1
         podman logs zuul-tutorial_launcher_1 > {{ ansible_user_dir }}/logs/launcher.log 2>&1
         podman logs zuul-tutorial_logs_1 > {{ ansible_user_dir }}/logs/logs.log 2>&1
+        podman logs zuul-tutorial-tracing_jaeger_1 > {{ ansible_user_dir }}/logs/jaeger.log 2>&1
         exit 0
     - name: Copy podman log files to executor
       synchronize:
