Fix retries on unreachable cleanup playbooks
Building on the prior change, this corrects additional issues with
the behavior of cleanup playbooks.  It:

* ensures that we don't flip the success flag to false if we're
  ignoring a post-run cleanup playbook built from the old syntax.
* ensures that the ignore_result and cleanup attributes of the
  playbook are set correctly when built from the old syntax.
* deletes the unreachable hosts file after each playbook to avoid
  re-detecting an unreachable host from an earlier cleanup playbook
  in a later post-run playbook.
* adds testing of unreachable cleanup playbooks.
* adds a release note about the fix.

Change-Id: I4582246d98506b2a8f888681da265485b0b0dca9

--- a/tests/fixtures/config/cleanup-playbook/git/common-config/zuul.yaml
+++ b/tests/fixtures/config/cleanup-playbook/git/common-config/zuul.yaml
@@ -55,6 +55,8 @@
 
 - job:
     name: child-cleanup-failure
+    description: |
+      A job that fails during the run playbook
     parent: python27-failure
     pre-run: playbooks/child-pre.yaml
     post-run:
@@ -63,9 +65,34 @@
         cleanup: true
 
 - job:
+    name: child-cleanup-failure-unreachable
+    description: |
+      A job that fails during the run playbook but then also has an
+      unreachable cleanup playbook
+    parent: python27-failure
+    pre-run: playbooks/child-pre.yaml
+    post-run:
+      - playbooks/child-post.yaml
+      - name: playbooks/child-cleanup-unreachable.yaml
+        cleanup: true
+
+- job:
     name: child-cleanup-failure-old-syntax
+    description: |
+      A job that fails during the run playbook
     parent: python27-failure
     pre-run: playbooks/child-pre.yaml
     post-run: playbooks/child-post.yaml
     # Backwards-compat syntax
     cleanup-run: playbooks/child-cleanup.yaml
+
+- job:
+    name: child-cleanup-failure-unreachable-old-syntax
+    description: |
+      A job that fails during the run playbook but then also has an
+      unreachable cleanup playbook
+    parent: python27-failure
+    pre-run: playbooks/child-pre.yaml
+    post-run: playbooks/child-post.yaml
+    # Backwards-compat syntax
+    cleanup-run: playbooks/child-cleanup-unreachable.yaml
