Remove nodepool part of single-tenant fixture
Let's favor the use of a small number of simple_layout test fixtures
for the nodepool-in-zuul work, at least as long as possible, while
we evolve the configuration syntax.  This should produce less churn.

Change-Id: Iac3b1dd6c02548a97bdc9a8ca53b5602d4ff3fcc

--- a/tests/fixtures/layouts/nodepool.yaml
+++ b/tests/fixtures/layouts/nodepool.yaml
@@ -91,10 +91,18 @@
 - flavor:
     name: normal
 
+- flavor:
+    name: large
+
 - label:
     name: debian-normal
     image: debian
     flavor: normal
+
+- label:
+    name: debian-large
+    image: debian
+    flavor: large
 
 - section:
     name: aws-base
@@ -106,6 +114,7 @@
       bucket-name: zuul
     flavors:
       - name: normal
+      - name: large
     images:
       - name: debian
 
@@ -119,3 +128,4 @@
     section: aws-us-east-1
     labels:
       - debian-normal
+      - debian-large
