WIP: Drive statemachine in launcher
This adds some skeleton code to create a state machine in the
launcher and drive it.  A number of features in the AWS driver
still need configuration settings added, so they have been commented
out with "TODO" comments to add them back in as the configuration
matures.

This adds stub attributes to the node to store the state machine
data, but does not yet serialize it to ZK.

The test_launcher test is removed since it requires the full AWS
test setup.  That functionality is covered by test_jobs_executed
in test_aws_driver.

Change-Id: I6f2404afddcc5373016bcadefb3cb97857380a16

--- a/tests/fixtures/layouts/nodepool.yaml
+++ b/tests/fixtures/layouts/nodepool.yaml
@@ -112,6 +112,8 @@
     launch-timeout: 600
     object-storage:
       bucket-name: zuul
+    # TODO
+    # key-name: zuul
     flavors:
       - name: normal
         instance-type: t3.medium
@@ -119,6 +121,7 @@
         instance-type: t3.large
     images:
       - name: debian
+        image-id: ami-1e749f67
 
 - section:
     name: aws-us-east-1
@@ -129,5 +132,7 @@
     name: aws-us-east-1-main
     section: aws-us-east-1
     labels:
-      - debian-normal
-      - debian-large
+      - name: debian-normal
+        key-name: zuul
+      - name: debian-large
+        key-name: zuul
