--- a/tests/fixtures/zuul-gitlab-driver.conf
+++ b/tests/fixtures/zuul-gitlab-driver.conf
@@ -1,5 +1,5 @@
 [web]
-status_url=http://zuul.example.com/status/#{change.number},{change.patchset}
+root=http://zuul.example.com/
 
 [merger]
 git_dir=/tmp/zuul-test/git
