Remove docs python version pin
By default, opendev now runs on Ubuntu noble nodes which have
Python 3.12 and not 3.11.  Remove the version pin which forced
3.11 in the docs jobs so that they will now run on 3.12.

Change-Id: I50804e39809ae9908e803b04d7046671a732e4c4

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -383,10 +383,7 @@
     check:
       jobs:
         - zuul-build-image
-        - zuul-nox-docs:
-            vars:
-              nox_force_python: "3.11"
-              python_version: "3.11"
+        - zuul-nox-docs
         - nox-linters:
             vars:
               nox_install_bindep: false
@@ -419,10 +416,7 @@
     gate:
       jobs:
         - zuul-upload-image
-        - zuul-nox-docs:
-            vars:
-              nox_force_python: "3.11"
-              python_version: "3.11"
+        - zuul-nox-docs
         - nox-linters:
             vars:
               nox_install_bindep: false
@@ -463,10 +457,7 @@
     release:
       jobs:
         - zuul-release-python
-        - zuul-publish-nox-docs:
-            vars:
-              nox_force_python: "3.11"
-              python_version: "3.11"
+        - zuul-publish-nox-docs
         - upload-container-image:
             secrets:
               name: container_registry_credentials
