--- a/tests/fixtures/layouts/nodepool.yaml
+++ b/tests/fixtures/layouts/nodepool.yaml
@@ -126,6 +126,7 @@
     connection: aws
     boot-timeout: 120
     launch-timeout: 600
+    launch-retries: 3
     object-storage:
       bucket-name: zuul
     # TODO
